--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,80 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>1.6-CPS</title>
   </head>
   <body>
-    <img src="./img/webpack.svg" alt="Webpack Logo" width="200px" />
-    <h3>Welcome to Webpack 4 starter </h3>
+
+    <div class="m-header">
+      <ul class="m-header__list">
+        <li class="m-header__list-item">
+          <button class="m-header__btn"> </button>
+        </li>
+        <li class="m-header__list-item--logo">
+          <img
+            src="./img/cps-logo-menu.svg"
+            alt="Логотип CPS"
+            class="m-header__logo"
+          />
+        </li>
+        <li class="m-header__list-item">
+          <button class="m-header__btn"> </button
+        </li>
+        <li class="m-header__list-item">
+          <button class="m-header__btn"> </button>
+        </li>
+      </ul>
+    </div>
+
+   <h1 class="title">
+        Услуги и сервисы
+      </h1>
+
+<nav class="navigation">
+    <ul class="navigation__list">
+        <li class="navigation__item">
+            <a href="#" class="navigation__link">
+                Ремонтируемые бренды
+            </a>
+        </li>
+        <li class="navigation__item">
+            <a href="#" class="navigation__link">
+                Ремонтируемые устройства
+            </a>
+        </li>
+        <li class="navigation__item">
+            <a href="#" class="navigation__link">
+                Цены на услуги
+            </a>
+        </li>
+        <li class="navigation__item">
+            <a href="#" class="navigation__link">
+                Адреса сервисных центров
+            </a>
+        </li>
+        <li class="navigation__item">
+            <a href="#" class="navigation__link">
+                Специальные цены
+            </a>
+        </li>
+        <li class="navigation__item">
+            <a href="#" class="navigation__link">
+                Отзывы
+            </a>
+        </li>
+    </ul>
+</nav>
+
+<main class="main">
+  <p class="main__text">
+    Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
+  </p>
+
+  <button class="main__more">
+      Читать далее
+  </button>
+
+</main>
+
   </body>
 </html>
