--- a/src/index.html
+++ b/src/index.html
@@ -72,15 +72,24 @@
 </nav>
 
 <main class="main">
+
   <p class="main__text">
     Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
   </p>
 
-  <button class="main__more">
-      Читать далее
-  </button>
+  <p class="main__text--hidden hidden">
+    Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.
+  </p>
+
+  <button class="main__more">Читать далее</button>
 
 </main>
+
+<img src="./img/cps_big.jpg" alt="Картинка из офиса CPS" class="cps__main">
+
+<div class="header-brands">
+  <p class="header-brands__title">Ремонт техники различных брендов</p>
+</div>
 
   </body>
 </html>
