--- a/src/index.html
+++ b/src/index.html
@@ -88,8 +88,8 @@
 
 <img src="./img/cps_big.jpg" alt="Картинка из офиса CPS" class="cps__main">
 
-<div class="header-brands">
-  <p class="header-brands__title">Ремонт техники различных брендов</p>
+<div class="m-title">
+  <p class="m-title__title">Ремонт техники различных брендов</p>
 </div>
 
 <div class="swiper brands">
@@ -177,6 +177,10 @@
 
   <div class="swiper-pagination"></div>
 
+  </div>
+
+  <div class="m-title">
+    <p class="m-title__title">Ремонт различных видов техники</p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
