--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <title>1.6-CPS</title>
   <link href="style.css" rel="stylesheet"></head>
   <body>
@@ -79,9 +80,101 @@
 
 <img src="./img/cps_big.jpg" alt="Картинка из офиса CPS" class="cps__main">
 
-<div class="header-brands">
-  <p class="header-brands__title">Ремонт техники различных брендов</p>
+<div class="m-title">
+  <p class="m-title__title">Ремонт техники различных брендов</p>
 </div>
 
+<div class="swiper brands">
+
+  <ul class="swiper-wrapper brands__list">
+
+      <li class="swiper-slide brands__item">
+          <button class="brands__btn">
+              <img src="./img/lenovo.svg" alt="lenovo" class="brands__logo">
+              <div class="brands__enter"></div>
+          </button>
+      </li>
+
+      <li class="swiper-slide brands__item">
+          <button class="brands__btn">
+              <img src="./img/samsung.svg" alt="samsung" class="brands__logo">
+              <div class="brands__enter"></div>
+          </button>
+      </li>
+
+      <li class="swiper-slide brands__item">
+          <button class="brands__btn">
+              <img src="./img/apple.svg" alt="apple" class="brands__logo">
+              <div class="brands__enter"></div>
+          </button>
+      </li>
+
+      <li class="swiper-slide brands__item">
+          <button class="brands__btn">
+              <img src="./img/viewsonic.svg" alt="ViewSonic" class="brands__logo">
+              <div class="brands__enter"></div>
+          </button>
+      </li>
+
+      <li class="swiper-slide brands__item">
+          <button class="brands__btn">
+              <img src="./img/bosch.svg" alt="bosch" class="brands__logo">
+              <div class="brands__enter"></div>
+          </button>
+      </li>
+
+      <li class="swiper-slide brands__item">
+          <button class="brands__btn">
+              <img src="./img/hp.svg" alt="hp" class="brands__logo">
+              <div class="brands__enter"></div>
+          </button>
+      </li>
+
+      <li class="swiper-slide brands__item">
+          <button class="brands__btn">
+              <img src="./img/acer.svg" alt="acer" class="brands__logo">
+              <div class="brands__enter"></div>
+          </button>
+      </li>
+
+      <li class="swiper-slide brands__item">
+          <button class="brands__btn">
+              <img src="./img/sony.svg" alt="sony" class="brands__logo">
+              <div class="brands__enter"></div>
+          </button>
+      </li>
+
+      <li class="swiper-slide brands__item">
+          <button class="brands__btn">
+              <img src="./img/lenovo.svg" alt="lenovo" class="brands__logo">
+              <div class="brands__enter"></div>
+          </button>
+      </li>
+
+      <li class="swiper-slide brands__item">
+          <button class="brands__btn">
+              <img src="./img/samsung.svg" alt="" class="brands__logo">
+              <div class="brands__enter"></div>
+          </button>
+      </li>
+
+      <li class="swiper-slide brands__item">
+          <button class="brands__btn">
+              <img src="./img/apple.svg" alt="" class="brands__logo">
+              <div class="brands__enter"></div>
+          </button>
+      </li>
+
+  </ul>
+
+  <div class="swiper-pagination"></div>
+
+  </div>
+
+  <div class="m-title">
+    <p class="m-title__title">Ремонт различных видов техники</p>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="./js/bundle.js"></script></body>
 </html>
