vtoroj swiper govno

--- a/src/index.html
+++ b/src/index.html
@@ -37,151 +37,168 @@
         Услуги и сервисы
       </h1>
 
-<nav class="navigation">
-    <ul class="navigation__list">
-        <li class="navigation__item">
-            <a href="#" class="navigation__link">
-                Ремонтируемые бренды
-            </a>
+    <nav class="navigation">
+        <ul class="navigation__list">
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">
+                    Ремонтируемые бренды
+                </a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">
+                    Ремонтируемые устройства
+                </a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">
+                    Цены на услуги
+                </a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">
+                    Адреса сервисных центров
+                </a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">
+                    Специальные цены
+                </a>
+            </li>
+            <li class="navigation__item">
+                <a href="#" class="navigation__link">
+                    Отзывы
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <main class="main">
+
+    <p class="main__text">
+        Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
+    </p>
+
+    <p class="main__text--hidden hidden">
+        Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.
+    </p>
+
+    <button class="main__more">Читать далее</button>
+
+    </main>
+
+    <img src="./img/cps_big.jpg" alt="Картинка из офиса CPS" class="cps__main">
+
+    <div class="m-title">
+    <p class="m-title__title">Ремонт техники различных брендов</p>
+    </div>
+
+    <div class="swiper brands">
+
+    <ul class="swiper-wrapper brands__list">
+
+        <li class="swiper-slide brands__item">
+            <button class="brands__btn">
+                <img src="./img/lenovo.svg" alt="lenovo" class="brands__logo">
+                <div class="brands__enter"></div>
+            </button>
         </li>
-        <li class="navigation__item">
-            <a href="#" class="navigation__link">
-                Ремонтируемые устройства
-            </a>
+
+        <li class="swiper-slide brands__item">
+            <button class="brands__btn">
+                <img src="./img/samsung.svg" alt="samsung" class="brands__logo">
+                <div class="brands__enter"></div>
+            </button>
         </li>
-        <li class="navigation__item">
-            <a href="#" class="navigation__link">
-                Цены на услуги
-            </a>
+
+        <li class="swiper-slide brands__item">
+            <button class="brands__btn">
+                <img src="./img/apple.svg" alt="apple" class="brands__logo">
+                <div class="brands__enter"></div>
+            </button>
         </li>
-        <li class="navigation__item">
-            <a href="#" class="navigation__link">
-                Адреса сервисных центров
-            </a>
+
+        <li class="swiper-slide brands__item">
+            <button class="brands__btn">
+                <img src="./img/viewsonic.svg" alt="ViewSonic" class="brands__logo">
+                <div class="brands__enter"></div>
+            </button>
         </li>
-        <li class="navigation__item">
-            <a href="#" class="navigation__link">
-                Специальные цены
-            </a>
+
+        <li class="swiper-slide brands__item">
+            <button class="brands__btn">
+                <img src="./img/bosch.svg" alt="bosch" class="brands__logo">
+                <div class="brands__enter"></div>
+            </button>
         </li>
-        <li class="navigation__item">
-            <a href="#" class="navigation__link">
-                Отзывы
-            </a>
+
+        <li class="swiper-slide brands__item">
+            <button class="brands__btn">
+                <img src="./img/hp.svg" alt="hp" class="brands__logo">
+                <div class="brands__enter"></div>
+            </button>
         </li>
+
+        <li class="swiper-slide brands__item">
+            <button class="brands__btn">
+                <img src="./img/acer.svg" alt="acer" class="brands__logo">
+                <div class="brands__enter"></div>
+            </button>
+        </li>
+
+        <li class="swiper-slide brands__item">
+            <button class="brands__btn">
+                <img src="./img/sony.svg" alt="sony" class="brands__logo">
+                <div class="brands__enter"></div>
+            </button>
+        </li>
+
+        <li class="swiper-slide brands__item">
+            <button class="brands__btn">
+                <img src="./img/lenovo.svg" alt="lenovo" class="brands__logo">
+                <div class="brands__enter"></div>
+            </button>
+        </li>
+
+        <li class="swiper-slide brands__item">
+            <button class="brands__btn">
+                <img src="./img/samsung.svg" alt="" class="brands__logo">
+                <div class="brands__enter"></div>
+            </button>
+        </li>
+
+        <li class="swiper-slide brands__item">
+            <button class="brands__btn">
+                <img src="./img/apple.svg" alt="" class="brands__logo">
+                <div class="brands__enter"></div>
+            </button>
+        </li>
+
     </ul>
-</nav>
 
-<main class="main">
+    <div class="swiper-pagination"></div>
 
-  <p class="main__text">
-    Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
-  </p>
+    </div>
 
-  <p class="main__text--hidden hidden">
-    Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.
-  </p>
+    <div class="tech-types swiper-tt">
 
-  <button class="main__more">Читать далее</button>
+    <div class="m-title">
+        <p class="m-title__title">Ремонт различных видов техники</p>
+    </div>
 
-</main>
+        <ul class="tech-types__list swiper-wrapper">
+            <li class="tech-types__item swiper-slide">Ремонт ноутбуков</li>
+            <li class="tech-types__item swiper-slide">Ремонт планшетов</li>
+            <li class="tech-types__item swiper-slide">Ремонт ПК</li>
+            <li class="tech-types__item swiper-slide">Ремонт мониторов</li>
+            <li class="tech-types__item swiper-slide">Ремонт залуп</li>
+            <li class="tech-types__item swiper-slide">Ремонт треснувших ваз</li>
+            <li class="tech-types__item swiper-slide">Ремонт любви к жизни</li>
+            <li class="tech-types__item swiper-slide">Ремонт сознания (таро)</li>
+        </ul>     
+        <div class="swiper-pagination-tt"></div>
 
-<img src="./img/cps_big.jpg" alt="Картинка из офиса CPS" class="cps__main">
+    </div>
 
-<div class="m-title">
-  <p class="m-title__title">Ремонт техники различных брендов</p>
-</div>
-
-<div class="swiper brands">
-
-  <ul class="swiper-wrapper brands__list">
-
-      <li class="swiper-slide brands__item">
-          <button class="brands__btn">
-              <img src="./img/lenovo.svg" alt="lenovo" class="brands__logo">
-              <div class="brands__enter"></div>
-          </button>
-      </li>
-
-      <li class="swiper-slide brands__item">
-          <button class="brands__btn">
-              <img src="./img/samsung.svg" alt="samsung" class="brands__logo">
-              <div class="brands__enter"></div>
-          </button>
-      </li>
-
-      <li class="swiper-slide brands__item">
-          <button class="brands__btn">
-              <img src="./img/apple.svg" alt="apple" class="brands__logo">
-              <div class="brands__enter"></div>
-          </button>
-      </li>
-
-      <li class="swiper-slide brands__item">
-          <button class="brands__btn">
-              <img src="./img/viewsonic.svg" alt="ViewSonic" class="brands__logo">
-              <div class="brands__enter"></div>
-          </button>
-      </li>
-
-      <li class="swiper-slide brands__item">
-          <button class="brands__btn">
-              <img src="./img/bosch.svg" alt="bosch" class="brands__logo">
-              <div class="brands__enter"></div>
-          </button>
-      </li>
-
-      <li class="swiper-slide brands__item">
-          <button class="brands__btn">
-              <img src="./img/hp.svg" alt="hp" class="brands__logo">
-              <div class="brands__enter"></div>
-          </button>
-      </li>
-
-      <li class="swiper-slide brands__item">
-          <button class="brands__btn">
-              <img src="./img/acer.svg" alt="acer" class="brands__logo">
-              <div class="brands__enter"></div>
-          </button>
-      </li>
-
-      <li class="swiper-slide brands__item">
-          <button class="brands__btn">
-              <img src="./img/sony.svg" alt="sony" class="brands__logo">
-              <div class="brands__enter"></div>
-          </button>
-      </li>
-
-      <li class="swiper-slide brands__item">
-          <button class="brands__btn">
-              <img src="./img/lenovo.svg" alt="lenovo" class="brands__logo">
-              <div class="brands__enter"></div>
-          </button>
-      </li>
-
-      <li class="swiper-slide brands__item">
-          <button class="brands__btn">
-              <img src="./img/samsung.svg" alt="" class="brands__logo">
-              <div class="brands__enter"></div>
-          </button>
-      </li>
-
-      <li class="swiper-slide brands__item">
-          <button class="brands__btn">
-              <img src="./img/apple.svg" alt="" class="brands__logo">
-              <div class="brands__enter"></div>
-          </button>
-      </li>
-
-  </ul>
-
-  <div class="swiper-pagination"></div>
-
-  </div>
-
-  <div class="m-title">
-    <p class="m-title__title">Ремонт различных видов техники</p>
-  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
