second swiper repaired, first refactor in progress

--- a/src/index.html
+++ b/src/index.html
@@ -179,25 +179,52 @@
 
     </div>
 
-    <div class="tech-types swiper-tt">
+      <section class="types-of">
 
-    <div class="m-title">
-        <p class="m-title__title">Ремонт различных видов техники</p>
-    </div>
+        <div class="types-of__header">Ремонт различных видов техники</div>
 
-        <ul class="tech-types__list swiper-wrapper">
-            <li class="tech-types__item swiper-slide">Ремонт ноутбуков</li>
-            <li class="tech-types__item swiper-slide">Ремонт планшетов</li>
-            <li class="tech-types__item swiper-slide">Ремонт ПК</li>
-            <li class="tech-types__item swiper-slide">Ремонт мониторов</li>
-            <li class="tech-types__item swiper-slide">Ремонт залуп</li>
-            <li class="tech-types__item swiper-slide">Ремонт треснувших ваз</li>
-            <li class="tech-types__item swiper-slide">Ремонт любви к жизни</li>
-            <li class="tech-types__item swiper-slide">Ремонт сознания (таро)</li>
-        </ul>     
-        <div class="swiper-pagination-tt"></div>
+        <div class="swiper types-of__swiper">
 
-    </div>
+            <ul class="swiper-wrapper types-of__list">
+                <li class="swiper-slide types-of__item">
+                    Ремонт ноутбуков
+                <div class="types-of__img"></div>
+                </li>
+                <li class="swiper-slide types-of__item">
+                    Ремонт планшетов
+                <div class="types-of__img"></div>
+                </li>
+                <li class="swiper-slide types-of__item">
+                    Ремонт ПК
+                <div class="types-of__img"></div>
+                </li>
+                <li class="swiper-slide types-of__item">
+                    Ремонт мониторов
+                <div class="types-of__img"></div>
+                </li>
+                <li class="swiper-slide types-of__item">
+                    Ремонт залуп
+                <div class="types-of__img"></div>
+                </li>
+                <li class="swiper-slide types-of__item">
+                    Ремонт разбитых сердец
+                <div class="types-of__img"></div>
+                </li>
+                <li class="swiper-slide types-of__item">
+                    Ремонт жизни (таро)
+                <div class="types-of__img"></div>
+                </li>
+                <li class="swiper-slide types-of__item">
+                    Ремонт микробиоты
+                <div class="types-of__img"></div>
+                </li>
+            </ul>
+
+            <div class="swiper-pagination"></div>
+
+        </div>
+
+    </section>
 
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
