--- a/src/index.html
+++ b/src/index.html
@@ -33,48 +33,46 @@
       </ul>
     </header>
 
+<main class="main">
 
-
-   <h1 class="main__title">
+    <h1 class="main__title">
         Услуги и сервисы
       </h1>
 
-    <nav class="navigation">
-        <ul class="navigation__list">
-            <li class="navigation__item">
-                <a href="#" class="navigation__link">
+    <nav class="main__navigation">
+        <ul class="main__navigation-list">
+            <li class="main__navigation-item">
+                <a href="#" class="main__navigation-link">
                     Ремонтируемые бренды
                 </a>
             </li>
-            <li class="navigation__item">
-                <a href="#" class="navigation__link">
+            <li class="main__navigation-item">
+                <a href="#" class="main__navigation-link">
                     Ремонтируемые устройства
                 </a>
             </li>
-            <li class="navigation__item">
-                <a href="#" class="navigation__link">
+            <li class="main__navigation-item">
+                <a href="#" class="main__navigation-link">
                     Цены на услуги
                 </a>
             </li>
-            <li class="navigation__item">
-                <a href="#" class="navigation__link">
+            <li class="main__navigation-item">
+                <a href="#" class="main__navigation-link">
                     Адреса сервисных центров
                 </a>
             </li>
-            <li class="navigation__item">
-                <a href="#" class="navigation__link">
+            <li class="main__navigation-item">
+                <a href="#" class="main__navigation-link">
                     Специальные цены
                 </a>
             </li>
-            <li class="navigation__item">
-                <a href="#" class="navigation__link">
+            <li class="main__navigation-item">
+                <a href="#" class="main__navigation-link">
                     Отзывы
                 </a>
             </li>
         </ul>
     </nav>
-
-    <main class="main">
 
     <p class="main__text">
         Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
@@ -84,12 +82,14 @@
         Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.
     </p>
 
-    <button class="main__more">Читать далее</button>
-
-    </main>
+    <button class="main__btn-more">Читать далее</button>
 
     <img src="./img/cps_big.jpg" alt="Картинка из офиса CPS" class="cps__main">
 
+
+</main>
+
+ 
     
     <section class="brands title">
 
@@ -141,7 +141,7 @@
     
     </section>
 
-      <section class="types-of">
+    <section class="types-of">
 
         <div class="types-of__header">Ремонт различных видов техники</div>
 
