mobile vers - ready. No modals

--- a/src/index.html
+++ b/src/index.html
@@ -309,8 +309,21 @@
 
         </div>
 
+        <div class="prices__description">
+            Все цены указаны с учетом НДС. Стоимость ремонта указана на единичную услугу. Для получения коммерческого предложения на постоянное обслуживание, оставьте заявку.
+            <button class="prices__get-offer">
+                Получить коммерческое предложение
+            </button>
+        </div>
 
     </section>
+
+    <footer class="footer">
+© 2019 CPS
+Разработано командой Apesong 
+<div class="footer__paddings">Политика конфиденциальности</div>
+Информация, размещенная на данной странице, не является публичной офертой
+    </footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
