treing to add modal

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,114 @@
   </head>
   <body>
 
+       <aside class="aside">
+        <header class="aside__header">
+            <div class="aside__header-wrapper">
+                <button class="aside__header-btn">
+                    <img src="./img/cross.svg" alt="Крестик" class="aside__header-icon">
+                </button>
+                <a href="#" class="aside__header-link">
+                    <img src="./img/cps-logo-menu.svg" alt="CPS icon" class="aside__header-img">
+                </a>
+                <button class="aside__header-btn">
+                    <img src="./img/magnifire.svg" alt="Лупа" class="aside__header-icon">
+                </button>
+            </div>
+        </header>
+
+        <nav class="aside__nav">
+            <ul class="aside__nav-list">
+                <li class="aside__nav-item">
+                    <a href="#" class="aside__nav-link">
+                        Ремонт техники
+                    </a>
+                </li>
+                <li class="aside__nav-item">
+                    <a href="#" class="aside__nav-link">
+                        Услуги и сервисы
+                    </a>
+                </li>
+                <li class="aside__nav-item">
+                    <a href="#" class="aside__nav-link">
+                        Корпоративным клиентам
+                    </a>
+                </li>
+                <li class="aside__nav-item">
+                    <a href="#" class="aside__nav-link">
+                        Продавцам техники
+                    </a>
+                </li>
+                <li class="aside__nav-item">
+                    <a href="#" class="aside__nav-link">
+                        Партнерам
+                    </a>
+                </li>
+                <li class="aside__nav-item">
+                    <a href="#" class="aside__nav-link">
+                        Производителям
+                    </a>
+                </li>
+                <li class="aside__nav-item">
+                    <a href="#" class="aside__nav-link">
+                        Наши сервисные центры
+                    </a>
+                </li>
+                <li class="aside__nav-item">
+                    <a href="#" class="aside__nav-link">
+                        Контакты
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+        <article class="aside__feedback">
+            <ul class="aside__feedback-list">
+                <li class="aside__feedback-item">
+                    <button class="aside__feedback-btn">
+                        <img src="./img/phone.svg" alt="Телефон" class="aside__feedback-icon">
+                    </button>
+                </li>
+                <li class="aside__feedback-item">
+                    <button class="aside__feedback-btn">
+                        <img src="./img/search.svg" alt="Сообщение" class="aside__feedback-icon">
+                    </button>
+                </li>
+                <li class="aside__feedback-item">
+                    <button class="aside__feedback-btn">
+                        <img src="./img/person.svg" alt="Персона" class="aside__feedback-icon">
+                    </button>
+                </li>
+            </ul>
+        </article>
+
+        <address class="aside__contacts">
+            <a href="mailto:mail@cps.com" class="aside__contacts-email">mail@cps.com</a>
+            <a href="tel:88008908900" class="aside__contacts-phone">8 800 890 8900</a>
+        </address>
+
+        <div class="aside__lang">
+            <ul class="aside__lang-list">
+                <li class="aside__lang-item">
+                    <a href="#" class="aside__lang-link--active">
+                        RU
+                    </a>
+                </li>
+                <li class="aside__lang-item">
+                    <a href="#" class="aside__lang-link">
+                        EN
+                    </a>
+                </li>
+                <li class="aside__lang-item">
+                    <a href="#" class="aside__lang-link">
+                        CH
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+    </aside>
+
+
     <header class="m-header">
       <ul class="m-header__list">
         <li class="m-header__list-item">
@@ -32,7 +140,7 @@
         </li>
       </ul>
     </header>
-
+    
     <main class="main">
 
         <h1 class="main__title">
@@ -141,7 +249,7 @@
 
     <section class="types-of title">
 
-        <div class="types-of__header">Ремонт различных видов техники</div>
+        <div class="types-of__header title__header">Ремонт различных видов техники</div>
 
         <div class="swiper types-of__swiper">
 
