--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="scss/style.scss">
     <title>CPS-FULL 1.6</title>
   <link href="style.css" rel="stylesheet"></head>
   <body class="body">
